--- a/levellist/package.json
+++ b/levellist/package.json
@@ -12,18 +12,19 @@
     "firebase": "^10.11.1",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
-    "next": "14.2.2",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "eslint-config-next": "14.2.2",
+    "postcss": "^8",
+    "react-router-dom": "^6.23.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
