--- a/levellist/package.json
+++ b/levellist/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
